deploy/fact-signoz/fact.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fact-operator-test
